# owncloud_deployer

./: .gitignore  Makefile  README.md  docker-compose.yml  hcl_content.tf  init.sh  owncloud-deployer-variables.env.example  pyproject.toml
.github/workflows/: publish-docker-image.yaml  update-testnet-server.yaml
balance_server/: README.md  index.js  package.json
docker/: Dockerfile  init.sh
docker/rootfs/etc/zinit/: balance.yaml  init.yaml  jumpscale.yaml
docker/tf_source_module/: main.tf
docs/: Adding_Admin.md  Destroying_Deployed_Instance.md  Getting_Deployment_Info.md
faucet/bottle/: api.py
faucet/bottle/templates/: requests_history.html
faucet/frontend/: index.html
faucet/models/: users.py
helmcharts/owncloud/: Chart.yaml  README.md  values.yaml
helmcharts/owncloud/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml  volume
jumpscale/tools/terraform/: __init__.py  terraform.py
tests/tools/terraform/: test_terraform.py
