[tool.poetry]
name = "owncloud-deployer"
packages = [{ include = "jumpscale" }]
version = "1.0.0"
description = "deployer for owncloud"
authors = ["waleed <waleed.hammam@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
certbot-nginx = "1.5.0"
js-sdk = "^11.5b13"
jinja2 = "=2.11.2"
markupsafe = "=1.1.1"

